--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "nexter",
+  "name": "Nexter",
   "version": "1.0.0",
   "description": "Nexter webpage",
   "main": "index.js",
   "scripts": {
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
-    "devserver": "live-server",
+    "devserver": "live-server --browser=firefox",
     "start": "npm-run-all --parallel devserver watch:sass",
 
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
