--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "prefix:css": "postcss css/style.comp.css --use autoprefixer > css/style.prefix.css",
-    "compress:css": "node-sass css/style/prefix.css css/style.css --output-style compressed",
+    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
     "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
   "author": "Wojciech Cywinski",
